# xide

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.c
com-geo/: cg2d.c  cg2d.h
components/: definition.h  item.c  item.h  shape2D.c  shape2D.h  widget.c  widget.h  widgets.h  window.c  window.h
computation-geometry/: cg2d.c  cg2d.h
glad/include/glad/: glad.h
glad/src/: glad.c
runtime/: allocator.c  allocator.h  array.c  array.h  callback.c  context.c  context.h  draw.c  draw.h  list.c  list.h  runtime.c  runtime.h  utils.c  utils.h  xgl-object.h
shader/: fragment.glsl  vert-default.glsl
style/: char_t.h  shader.c  shader.h
ui/: mainWindow.xui
